# vlm-kie

./: .gitignore  CLAUDE.md  RUNBOOK.md  pyproject.toml  requirement.md  run.py
scripts/: compare_results.py  demo_paddle.py  download_samples.py  run_benchmark.py  run_pp_chatocrv4.py  run_ppocr_v5_annotate.py
src/vlm_kie/: __init__.py
src/vlm_kie/config/: extraction.yaml  models.yaml
src/vlm_kie/data/: loader.py
src/vlm_kie/eval/: metrics.py  report.py
src/vlm_kie/models/: __init__.py  base.py  glm_ocr.py  paddleocr_vl.py  pp_chatocrv4.py  pp_chatocrv4_hybrid.py  pp_ocr_v5.py  pp_structure_v3.py  qwen_ollama.py  registry.py
src/vlm_kie/pipelines/: batch.py  extractor.py
src/vlm_kie/utils/: device.py  image.py  json_repair.py
tests/: test_json_repair.py  test_metrics.py
